# git-branch-selector

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: config_schema.json
src/: cli.rs  config.rs  git.rs  main.rs  re.rs  theme.rs
src/config/: base.rs  file.rs  mod.rs
src/git/: branch_getter.rs  fs.rs  git2.rs  gitoxide.rs  mod.rs
src/select/: mod.rs
src/select/theme/: mod.rs  style.rs  styled_string.rs
tools/package/: package-archive  package-deb  sha256  version
