[package]
name = "git-branch-selector"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bselect"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
dialoguer = "0.10.2"
directories = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.32"
