[package]
name = "git-branch-selector"
version = "2.0.0"
authors = ["hsaunders1904 <33317174+hsaunders1904@users.noreply.github.com>"]
description = "Command line utility to interactively select git branches"
edition = "2021"
readme = "README.md"
repository = "https://github.com/hsaunders1904/git-branch-selector"
license = "GPL-3.0-or-later"
keywords = ["git", "console"]
categories = ["command-line-utilities"]

[[bin]]
name = "bselect"
path = "src/main.rs"

[dependencies]
clap = { version = "^3.0.0", features = ["derive"] }
dialoguer = "0.10.3"
directories = "4.0.1"
gix = "0.39.0"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"

[dev-dependencies]
tempfile = "3.4.0"

[profile.release]
strip = true  # strip symbols from the binary.
opt-level = "z"  # optimize for size; we're not so worried about speed
codegen-units = 1
lto = true
